force-app/main/default/objects/GfAmsSkuType__c/GfAmsSkuType__c.object-meta.xml
<CustomObject>
    <description>SKU Type 본사 직원 등록</description>
    <label>SKU 유형</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>