force-app/main/default/objects/GfAmsSkuType__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>색상</description>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>