force-app/main/default/objects/GfAmsSkuType__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>크기</description>
    <label>Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>