force-app/main/default/objects/GfAmsSkuType__c/fields/Sku_option4__c.field-meta.xml
<CustomField>
    <fullName>Sku_option4__c</fullName>
    <label>Sku option4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>