force-app/main/default/objects/GfAmsSkuType__c/fields/Sku_option5__c.field-meta.xml
<CustomField>
    <fullName>Sku_option5__c</fullName>
    <label>Sku option5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>